AGS: Menu/Bar CSS padding/alignments Fixup!
 -> Fixup the alignment of the AppMenu/Launcher.

 Note: The Popups/Widgets should always be boxed within that 2 pixel
 border-width of my active window borders. I accidently changed the
 padding in a previous commit. Oops!

--- a/ags/widget/bar/bar.scss
+++ b/ags/widget/bar/bar.scss
@@ -41,7 +41,7 @@ $button-radius: $radius;
     .overview,
     .rotate,
     .wvctl {
-        padding: 2px;
+        padding: 0px;
 
         image {
             font-weight: bold;
